crates/aranya-policy-compiler/tests/data/type_errors/ffi_option_arg_invalid_type.fail.policy
use test
function foo() bool {
    return test::doit(Some(3))
}
